flex/flex-tests/testData/js2_highlighting/DefaultConstructorVisibility.js2
package <error descr="Package name 'foo' does not correspond to file path ''">foo</error> {
public class <error descr="Class 'Target' should be defined in file 'Target.js2'">Target</error> {
    function Target() {
    }
}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'bar' does not correspond to file path ''">bar</error> {
import foo.*;

public class <error descr="Class 'Caller' should be defined in file 'Caller.js2'">Caller</error> {
    public function Caller() {
        var target:Target = new Target();
    }
}
}

class XXX {
    <error descr="Constructor should be public or have no visibility specified">private</error> function XXX() {
    }

    protected function foo() {
        <error descr="Superclass constructor invocation should be in constructor body">super()</error>;
    }
}

class XXX2 {
    <error descr="Constructor should be public or have no visibility specified">internal</error> function XXX2() {
    }
}

class XXX3 {
    namespace xxx;
    <error descr="Constructor should be public or have no visibility specified">xxx</error> function XXX3() {
    }
}